@@ -106,6 +106,9 @@ var ReplSet = exports.ReplSet = function(servers, options) {
     this._readPreference = null;
   }
 
+  // Ensure read_secondary is set correctly
+  this.readSecondary = this._readPreference == ReadPreference.PRIMARY ? false : true;
+
   // Strategy for picking a secondary
   this.secondaryAcceptableLatencyMS = this.options['secondaryAcceptableLatencyMS'] == null ? 15 : this.options['secondaryAcceptableLatencyMS'];
   this.strategy = this.options['strategy'];
