@@ -1,10 +1,11 @@
 1.1.12
 -----------------
-- honor connectTimeoutMS option for replicasets (Issue #750, https://github.com/aheckmann)
+- Honor connectTimeoutMS option for replicasets (Issue #750, https://github.com/aheckmann)
 - Fix ping strategy regression (Issue #738, https://github.com/aheckmann)
 - Small cleanup of code (Issue #753, https://github.com/sokra/node-mongodb-native)
-- fixed index declaration using objects/arrays from other contexts (Issue #755, https://github.com/sokra/node-mongodb-native)
+- Fixed index declaration using objects/arrays from other contexts (Issue #755, https://github.com/sokra/node-mongodb-native)
 - Intermittent (and rare) null callback exception when using ReplicaSets (Issue #752)
+- Force correct setting of read_secondary based on the read preference (Issue #741)
 
 1.1.11 2012-10-10
 -----------------
